# supply-chain-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.yaml  azure.yaml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
infra/: README.md  cicd.md  container-apps.md  main.bicep  main.bicepparam  sql-grant.sql
mock_data/: carrier_emails.json  generate.py  gps_readings.json  inventory.json  milestones.json  purchase_orders.json  sales_orders.json  seed_db.py  shipments.json
src/: api.py  bootstrap.py  config.py  db.py  email_parsing.py  llm.py  main.py  state.py  telemetry.py  workflow.py
src/executors/: autonomous_action.py  human_approval.py  impact_analysis.py  ingestion.py  mitigation.py  risk_detection.py
src/models/: email.py  erp.py  gps.py  inventory.py  milestone.py  mitigation.py  risk.py  sales_order.py  shipment.py
tests/: conftest.py  test_api.py  test_email_parsing.py
tests/test_executors/: test_impact_analysis.py  test_mitigation.py  test_risk_detection.py
