[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-agent"
version = "0.1.0"
description = "Autonomous Supply Chain Visibility & Mitigation Agent built on Microsoft Agent Framework"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Microsoft Agent Framework 1.0 (installs core + all sub-packages)
    "agent-framework>=1.0.0",
    # Azure AI Foundry integration (still in preview as of July 2026)
    "agent-framework-azure-ai>=1.0.0rc1",

    # Azure SDKs
    "azure-identity>=1.17.0",
    "azure-search-documents>=11.6.0",
    "azure-eventhub>=5.12.0",

    # API + Data
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",       # Local dev (SQLite async)
    "aioodbc>=0.5.0",          # Azure SQL async

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",            # Pretty console output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "faker>=28.0.0",            # Mock data generation
    "pre-commit>=3.7.0",
]

# Flat layout: `src` and `mock_data` are the importable top-level packages.
# Declared explicitly so `pip install .` (used in the Docker image) doesn't
# fail setuptools' multi-package auto-discovery.
[tool.setuptools]
packages = ["src", "mock_data"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
